added the ignore warnings

--- a/BaoundaryModeling.ipynb
+++ b/BaoundaryModeling.ipynb
@@ -17,14 +17,16 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:32.683044Z",
-     "start_time": "2019-03-16T23:09:31.427648Z"
+     "end_time": "2019-03-09T19:24:23.498570Z",
+     "start_time": "2019-03-09T19:24:22.312827Z"
     }
    },
    "outputs": [],
    "source": [
     "import pygeostat as gs\n",
     "import os\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -36,8 +38,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:32.699090Z",
-     "start_time": "2019-03-16T23:09:32.683044Z"
+     "end_time": "2019-03-09T19:24:24.141969Z",
+     "start_time": "2019-03-09T19:24:24.132992Z"
     }
    },
    "outputs": [
@@ -75,8 +77,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:32.718019Z",
-     "start_time": "2019-03-16T23:09:32.700056Z"
+     "end_time": "2019-03-09T19:24:25.179868Z",
+     "start_time": "2019-03-09T19:24:25.173881Z"
     }
    },
    "outputs": [],
@@ -101,8 +103,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:32.751016Z",
-     "start_time": "2019-03-16T23:09:32.720005Z"
+     "end_time": "2019-03-09T19:24:25.641066Z",
+     "start_time": "2019-03-09T19:24:25.637077Z"
     }
    },
    "outputs": [],
@@ -116,8 +118,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:32.789825Z",
-     "start_time": "2019-03-16T23:09:32.752024Z"
+     "end_time": "2019-03-09T19:24:26.010703Z",
+     "start_time": "2019-03-09T19:24:26.001692Z"
     },
     "scrolled": true
    },
@@ -222,8 +224,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:32.825756Z",
-     "start_time": "2019-03-16T23:09:32.791823Z"
+     "end_time": "2019-03-09T19:24:26.761552Z",
+     "start_time": "2019-03-09T19:24:26.756566Z"
     }
    },
    "outputs": [],
@@ -245,8 +247,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:32.891554Z",
-     "start_time": "2019-03-16T23:09:32.827733Z"
+     "end_time": "2019-03-09T19:24:27.413134Z",
+     "start_time": "2019-03-09T19:24:27.366259Z"
     },
     "scrolled": true
    },
@@ -342,8 +344,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:32.917485Z",
-     "start_time": "2019-03-16T23:09:32.893549Z"
+     "end_time": "2019-03-09T19:24:27.832063Z",
+     "start_time": "2019-03-09T19:24:27.810082Z"
     },
     "scrolled": true
    },
@@ -373,8 +375,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:32.922472Z",
-     "start_time": "2019-03-16T23:09:32.918481Z"
+     "end_time": "2019-03-09T19:24:28.070831Z",
+     "start_time": "2019-03-09T19:24:28.065882Z"
     }
    },
    "outputs": [
@@ -406,8 +408,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:32.932443Z",
-     "start_time": "2019-03-16T23:09:32.924466Z"
+     "end_time": "2019-03-09T19:24:28.727029Z",
+     "start_time": "2019-03-09T19:24:28.723040Z"
     }
    },
    "outputs": [],
@@ -420,15 +422,15 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:33.167461Z",
-     "start_time": "2019-03-16T23:09:32.937471Z"
+     "end_time": "2019-03-09T19:24:29.350444Z",
+     "start_time": "2019-03-09T19:24:29.133032Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.axes_grid1.axes_divider.LocatableAxes at 0x16cc5853630>"
+       "<mpl_toolkits.axes_grid1.axes_divider.LocatableAxes at 0x1fab3420b70>"
       ]
      },
      "execution_count": 11,
@@ -481,8 +483,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:33.172451Z",
-     "start_time": "2019-03-16T23:09:33.169455Z"
+     "end_time": "2019-03-09T19:24:30.433044Z",
+     "start_time": "2019-03-09T19:24:30.428099Z"
     }
    },
    "outputs": [],
@@ -495,8 +497,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:33.197396Z",
-     "start_time": "2019-03-16T23:09:33.174442Z"
+     "end_time": "2019-03-09T19:24:30.969645Z",
+     "start_time": "2019-03-09T19:24:30.964691Z"
     }
    },
    "outputs": [
@@ -517,8 +519,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:35.643282Z",
-     "start_time": "2019-03-16T23:09:33.202384Z"
+     "end_time": "2019-03-09T19:24:31.534907Z",
+     "start_time": "2019-03-09T19:24:31.436174Z"
     }
    },
    "outputs": [
@@ -526,7 +528,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Mosi\\Desktop\\CourseMaterial\\tmpusbs75ca/dfcalc.par has been copied to the clipboard\n"
+      "C:\\Users\\Mosi\\Documents\\Git\\GeostatCourse\\613March2019\\tmp7wvp0wn5/dfcalc.par has been copied to the clipboard\n"
      ]
     }
    ],
@@ -541,8 +543,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:35.729051Z",
-     "start_time": "2019-03-16T23:09:35.646274Z"
+     "end_time": "2019-03-09T19:24:32.010606Z",
+     "start_time": "2019-03-09T19:24:31.938799Z"
     }
    },
    "outputs": [
@@ -603,8 +605,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:35.769942Z",
-     "start_time": "2019-03-16T23:09:35.731058Z"
+     "end_time": "2019-03-09T19:24:32.669563Z",
+     "start_time": "2019-03-09T19:24:32.629669Z"
     }
    },
    "outputs": [
@@ -711,8 +713,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:35.807870Z",
-     "start_time": "2019-03-16T23:09:35.771938Z"
+     "end_time": "2019-03-09T19:24:33.046113Z",
+     "start_time": "2019-03-09T19:24:33.010212Z"
     }
    },
    "outputs": [
@@ -820,8 +822,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:35.817821Z",
-     "start_time": "2019-03-16T23:09:35.812852Z"
+     "end_time": "2019-03-09T19:24:33.500212Z",
+     "start_time": "2019-03-09T19:24:33.494230Z"
     }
    },
    "outputs": [
@@ -844,15 +846,15 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:36.195735Z",
-     "start_time": "2019-03-16T23:09:35.819818Z"
+     "end_time": "2019-03-09T19:24:34.340621Z",
+     "start_time": "2019-03-09T19:24:34.003558Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.axes_grid1.axes_divider.LocatableAxes at 0x16cc5bea908>"
+       "<mpl_toolkits.axes_grid1.axes_divider.LocatableAxes at 0x1fab37b23c8>"
       ]
      },
      "execution_count": 19,
@@ -893,8 +895,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:37.030775Z",
-     "start_time": "2019-03-16T23:09:36.197715Z"
+     "end_time": "2019-03-09T19:24:38.232304Z",
+     "start_time": "2019-03-09T19:24:35.797422Z"
     }
    },
    "outputs": [
@@ -942,8 +944,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:37.042744Z",
-     "start_time": "2019-03-16T23:09:37.032801Z"
+     "end_time": "2019-03-09T19:24:40.184927Z",
+     "start_time": "2019-03-09T19:24:40.169968Z"
     }
    },
    "outputs": [
@@ -1042,8 +1044,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:37.055712Z",
-     "start_time": "2019-03-16T23:09:37.044738Z"
+     "end_time": "2019-03-09T19:24:40.905693Z",
+     "start_time": "2019-03-09T19:24:40.900709Z"
     }
    },
    "outputs": [
@@ -1065,8 +1067,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:37.422570Z",
-     "start_time": "2019-03-16T23:09:37.059703Z"
+     "end_time": "2019-03-09T19:24:41.307009Z",
+     "start_time": "2019-03-09T19:24:41.178446Z"
     }
    },
    "outputs": [
@@ -1074,7 +1076,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Mosi\\Desktop\\CourseMaterial\\tmpa3e5d4z1/bigaus2.par has been copied to the clipboard\n"
+      "C:\\Users\\Mosi\\Documents\\Git\\GeostatCourse\\613March2019\\tmpyrvrns8e/bigaus2.par has been copied to the clipboard\n"
      ]
     }
    ],
@@ -1088,8 +1090,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:37.487957Z",
-     "start_time": "2019-03-16T23:09:37.425568Z"
+     "end_time": "2019-03-09T19:24:41.748343Z",
+     "start_time": "2019-03-09T19:24:41.678341Z"
     }
    },
    "outputs": [
@@ -1155,8 +1157,8 @@
    "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:37.504928Z",
-     "start_time": "2019-03-16T23:09:37.488929Z"
+     "end_time": "2019-03-09T19:24:41.967078Z",
+     "start_time": "2019-03-09T19:24:41.945138Z"
     }
    },
    "outputs": [
@@ -1263,8 +1265,8 @@
    "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:37.524841Z",
-     "start_time": "2019-03-16T23:09:37.506884Z"
+     "end_time": "2019-03-09T19:24:42.293744Z",
+     "start_time": "2019-03-09T19:24:42.270777Z"
     }
    },
    "outputs": [
@@ -1388,8 +1390,8 @@
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:37.886901Z",
-     "start_time": "2019-03-16T23:09:37.528862Z"
+     "end_time": "2019-03-09T19:24:43.349516Z",
+     "start_time": "2019-03-09T19:24:43.021395Z"
     }
    },
    "outputs": [
@@ -1456,8 +1458,8 @@
    "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:38.259377Z",
-     "start_time": "2019-03-16T23:09:37.887862Z"
+     "end_time": "2019-03-09T19:24:43.697278Z",
+     "start_time": "2019-03-09T19:24:43.600508Z"
     }
    },
    "outputs": [
@@ -1465,7 +1467,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Mosi\\Desktop\\CourseMaterial\\tmpsxzxk34o/kt3dn.par has been copied to the clipboard\n"
+      "C:\\Users\\Mosi\\Documents\\Git\\GeostatCourse\\613March2019\\tmpclar1b2h/kt3dn.par has been copied to the clipboard\n"
      ]
     }
    ],
@@ -1479,8 +1481,8 @@
    "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:50.170138Z",
-     "start_time": "2019-03-16T23:09:38.261371Z"
+     "end_time": "2019-03-09T19:24:55.990875Z",
+     "start_time": "2019-03-09T19:24:43.901227Z"
     }
    },
    "outputs": [
@@ -1606,8 +1608,8 @@
    "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:50.367268Z",
-     "start_time": "2019-03-16T23:09:50.172132Z"
+     "end_time": "2019-03-09T19:24:56.266339Z",
+     "start_time": "2019-03-09T19:24:55.992907Z"
     }
    },
    "outputs": [
@@ -1690,8 +1692,8 @@
    "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:50.381192Z",
-     "start_time": "2019-03-16T23:09:50.369224Z"
+     "end_time": "2019-03-09T19:24:56.281299Z",
+     "start_time": "2019-03-09T19:24:56.268335Z"
     }
    },
    "outputs": [
@@ -1769,15 +1771,15 @@
    "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:50.853076Z",
-     "start_time": "2019-03-16T23:09:50.383222Z"
+     "end_time": "2019-03-09T19:24:56.745115Z",
+     "start_time": "2019-03-09T19:24:56.283293Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.axes_grid1.axes_divider.LocatableAxes at 0x16cc6268390>"
+       "<mpl_toolkits.axes_grid1.axes_divider.LocatableAxes at 0x1fab3bf96d8>"
       ]
      },
      "execution_count": 32,
@@ -1836,8 +1838,8 @@
    "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:51.055364Z",
-     "start_time": "2019-03-16T23:09:50.855036Z"
+     "end_time": "2019-03-09T19:24:56.954498Z",
+     "start_time": "2019-03-09T19:24:56.749049Z"
     }
    },
    "outputs": [
@@ -1851,7 +1853,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.axes_grid1.axes_divider.LocatableAxes at 0x16cc64d3f98>"
+       "<mpl_toolkits.axes_grid1.axes_divider.LocatableAxes at 0x1fab3eddcc0>"
       ]
      },
      "execution_count": 33,
@@ -1909,8 +1911,8 @@
    "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:51.066365Z",
-     "start_time": "2019-03-16T23:09:51.057376Z"
+     "end_time": "2019-03-09T19:24:56.961479Z",
+     "start_time": "2019-03-09T19:24:56.956494Z"
     }
    },
    "outputs": [],
@@ -1925,8 +1927,8 @@
    "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:09:59.839905Z",
-     "start_time": "2019-03-16T23:09:51.068336Z"
+     "end_time": "2019-03-09T19:25:05.058803Z",
+     "start_time": "2019-03-09T19:24:56.963475Z"
     }
    },
    "outputs": [
@@ -1940,7 +1942,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e091916d314c45769a77d71c3f1a6a0f",
+       "model_id": "300aba949b0f4735adbb4b10e408f407",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2029,8 +2031,8 @@
    "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:10:00.690708Z",
-     "start_time": "2019-03-16T23:09:59.845884Z"
+     "end_time": "2019-03-09T19:25:05.783906Z",
+     "start_time": "2019-03-09T19:25:05.060799Z"
     }
    },
    "outputs": [
@@ -2067,8 +2069,8 @@
    "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:10:01.709804Z",
-     "start_time": "2019-03-16T23:10:00.692698Z"
+     "end_time": "2019-03-09T19:25:06.778243Z",
+     "start_time": "2019-03-09T19:25:05.785859Z"
     }
    },
    "outputs": [],
@@ -2119,8 +2121,8 @@
    "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-16T23:10:02.589929Z",
-     "start_time": "2019-03-16T23:10:01.713075Z"
+     "end_time": "2019-03-09T19:25:07.683074Z",
+     "start_time": "2019-03-09T19:25:06.780239Z"
     }
    },
    "outputs": [
