--- a/615March2020/notebooks/Kriging.ipynb
+++ b/615March2020/notebooks/Kriging.ipynb
@@ -1395,7 +1395,7 @@
     "500.0  500.0  150.0                   -maximum search radii\n",
     " 0.0   0.0   0.0                      -angles for search ellipsoid\n",
     "0                                     -0=SK,1=OK,2=LVM(resid),3=LVM((1-w)*m(u))),4=colo,5=exdrift,6=ICCK\n",
-    "{mn} 0.6  0.8                          -  mean (if 0,4,5,6), corr. (if 4 or 6), var. reduction factor (if 4)\n",
+    "0.0 0.6  0.8                          -  mean (if 0,4,5,6), corr. (if 4 or 6), var. reduction factor (if 4)\n",
     "0 0 0 0 0 0 0 0 0                     -drift: x,y,z,xx,yy,zz,xy,xz,zy\n",
     "0                                     -0, variable; 1, estimate trend\n",
     "extdrift.out                          -gridded file with drift/mean\n",
@@ -1405,11 +1405,6 @@
     "{varmodel}\n",
     "\"\"\"\n",
     "\n",
-    "\n",
-    "\n",
-    "# Calculate the mean of the Top Elevation distribution\n",
-    "TE_mean = dfl_ns.data['Top Elevation'].mean()\n",
-    "mn=TE_mean\n",
     "\n",
     "\n",
     "krig_output = os.path.join(outdir, 'KrigGrid.out')\n",
@@ -1425,7 +1420,6 @@
     "                     t_min = gs.Parameters['data.tmin'],\n",
     "                      griddef = str(dfl_ns.griddef),\n",
     "                     varmodel=varmodel,\n",
-    "                     mn=mn,\n",
     "                     output=krig_output)\n",
     "kt3dn.run(parstr=parstr, liveoutput=True)"
    ]
